[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/img/spaceship/fire/fire_0002.png" type="Texture" id=1]
[ext_resource path="res://Scenes/character/player/Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/img/spaceship/fire/fire_0001.png" type="Texture" id=3]
[ext_resource path="res://Assets/img/spaceship/fire/fire_0003.png" type="Texture" id=4]
[ext_resource path="res://Assets/img/spaceship/spaceship_v3.png" type="Texture" id=5]
[ext_resource path="res://Assets/img/spaceship/fire/fire_0000.png" type="Texture" id=6]
[ext_resource path="res://Assets/img/spaceship/fire/fire_0004.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [  ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 3 ), ExtResource( 1 ), ExtResource( 4 ), ExtResource( 7 ) ],
"loop": true,
"name": "move",
"speed": 21.0
} ]

[sub_resource type="OccluderPolygon2D" id=2]
polygon = PoolVector2Array( -4, -551.1, 2, -548.1, 2, -546.9, 25, -523.9, 25, -522, 30, -518, 30, -516, 34, -513, 34, -511, 38, -508, 38, -505.9, 46, -496.9, 46, -494.9, 54, -484.9, 54, -482.9, 59, -476.9, 59, -474.7, 59.6, -473.5, 60.4, -473.5, 62, -471.9, 62, -469.7, 63.6, -466.5, 64.4, -466.5, 66, -464.9, 66, -462.7, 69.6, -455.5, 70.4, -455.5, 72, -453.9, 72, -451.8, 87, -422.7, 87, -419.8, 90, -415.8, 90, -412.8, 93, -408.8, 93, -405.7, 101, -388.7, 101, -385.7, 104, -379.7, 104, -375.5, 105.7, -370.5, 106.8, -370.5, 107.8, -365.5, 108.6, -365.5, 110, -362.7, 110, -359.5, 123, -321.7, 123, -317.8, 129, -297.6, 129, -292.6, 132, -284.7, 132, -279.5, 141, -241.6, 141, -235.5, 149, -187.6, 149, -178.5, 152, -159.6, 152, -148.5, 156.9, -95.5, 157.6, -95.5, 158.6, -93.5, 160.4, -93.5, 165.4, -89.5, 167.2, -89.5, 176, -85.1, 176, -83.9, 176.4, -83.5, 178.2, -83.5, 181, -82.1, 181, -80.9, 181.4, -80.5, 183.2, -80.5, 186, -79.1, 186, -77.9, 186.4, -77.5, 188.2, -77.5, 191, -76.1, 191, -75.1, 200, -70.1, 200, -68.9, 200.4, -68.5, 203, -68.5, 203, -66.9, 203.4, -66.5, 206, -66.5, 206, -64.9, 206.4, -64.5, 209, -64.5, 209, -63.1, 213, -61.1, 213, -59.9, 214.4, -58.5, 217, -58.5, 217, -56.9, 218.4, -55.5, 221, -55.5, 221, -53.9, 223.4, -51.5, 226, -51.5, 226, -49.9, 228.4, -47.5, 231, -47.5, 231, -45.9, 260, -19.9, 260, -17.9, 276, -1.90002, 276, 0, 281, 4, 281, 6, 284, 8, 284, 10, 288, 13, 288, 15.1, 296, 24.1, 296, 26.1, 304, 36.1, 304, 38.1, 309, 44.1, 309, 46.3, 309.6, 47.5, 310.4, 47.5, 312, 49.1, 312, 51.3, 312.6, 52.5, 313.4, 52.5, 315, 54.1, 315, 56.3, 317.6, 61.5, 318.4, 61.5, 320, 63.1, 320, 65.2, 332, 87.2, 332, 90.2, 335, 94.2, 335, 97.2, 338, 101.2, 338, 104.3, 344, 117.3, 344, 120.4, 350, 136.3, 350, 140.2, 352, 143.2, 352, 147.2, 358, 167.4, 358, 172.5, 365, 206.4, 365, 216.5, 367, 233.4, 367, 260.5, 366, 260.5, 366, 281.5, 365, 281.5, 365, 294.5, 363.9, 294.5, 361.9, 316.5, 360.9, 316.5, 355.8, 343.5, 354.8, 343.5, 351.8, 357.5, 350.8, 357.5, 347, 369.8, 347, 375.3, 354, 391.3, 354, 405.6, 351.8, 413.5, 350.6, 413.5, 347.7, 420.5, 346.5, 420.5, 341.5, 426.5, 339.4, 426.5, 334.4, 430.5, 331.3, 430.5, 328.3, 432.5, 310, 432.5, 310, 431.4, 304, 430.3, 304, 429.3, 300, 428.3, 300, 427, 292, 421, 292, 419.1, 290, 418.1, 290, 415.7, 285, 405.7, 285, 390.3, 289.3, 379.5, 290.5, 379.5, 294.5, 373.5, 296.6, 373.5, 300, 370.1, 300, 368.1, 302, 366.1, 302, 356.5, 301.2, 356.5, 297.2, 341.5, 296.3, 341.5, 291.3, 326.5, 290.4, 326.5, 288, 321.7, 288, 319.5, 287.4, 319.5, 269.4, 283.5, 268.4, 283.5, 263.4, 274.5, 262.6, 274.5, 261, 272.9, 261, 271.5, 259, 269.9, 259, 268.5, 254, 262.9, 254, 261.5, 247, 253.9, 247, 252.5, 242, 247.9, 242, 246.5, 234, 238.9, 234, 237.5, 216.6, 219.5, 214.5, 219.5, 208.5, 212.5, 206.6, 212.5, 192.6, 199.5, 190.5, 199.5, 188.5, 196.5, 186.7, 196.5, 169.7, 183.5, 167.7, 183.5, 159.7, 177.5, 157.8, 177.5, 155, 176.1, 155, 174.9, 154.6, 174.5, 152.8, 174.5, 146, 171.1, 146, 169.9, 145.6, 169.5, 143.6, 169.5, 141.6, 167.5, 138, 167.5, 134, 171.9, 134, 177.6, 116.8, 245.5, 115.8, 245.5, 104.7, 281.5, 103.7, 281.5, 89.7, 318.5, 88.6, 318.5, 87.6, 320.5, 85.3, 320.5, 74, 329, 74, 331.8, 70, 337.8, 70, 340.7, 64.7, 356.5, 63.8, 356.5, 62.8, 360.5, 61.5, 360.5, 59.5, 363.5, 57.2, 363.5, 45.1, 366.5, 15.2, 366.5, 12, 368.1, 12, 369, 21, 376, 21, 377.9, 23, 378.9, 23, 381.2, 27, 388.2, 27, 392.5, 28, 405.5, 26.9, 405.5, 25.9, 412.5, 24.6, 412.5, 19.6, 422.5, 18.5, 422.5, 10.4, 429.5, 8.20001, 429.5, 2.20001, 432.5, -16, 432.5, -16, 431.4, -22, 430.3, -22, 429.1, -29, 426.2, -29, 424.9, -37, 416.9, -37, 414.7, -41, 406.7, -41, 390.3, -36.7, 379.5, -35.7, 379.5, -34.7, 376.5, -33.4, 376.5, -26, 369.1, -26, 368.5, -29.3, 366.5, -40, 366.5, -81, 362.5, -81, 361.1, -83, 360.1, -83, 356.8, -85, 353.8, -85, 349.8, -87, 346.8, -87, 342.7, -90.8, 327.5, -91.6, 327.5, -92.6, 325.5, -95.6, 325.5, -96.6, 323.5, -98.4, 323.5, -100.4, 321.5, -103.2, 321.5, -106, 320.1, -106, 319, -109, 317, -109, 313.7, -116, 298.7, -116, 296.5, -116.6, 296.5, -118, 293.7, -118, 290.8, -121, 285.8, -121, 282.6, -133, 250.7, -133, 246.5, -142, 219.7, -142, 215.8, -149, 191.6, -149, 186.7, -151, 182.7, -151, 176.5, -151.8, 172.5, -153, 172.5, -153, 170.5, -155.5, 167.5, -159, 167.5, -159, 168.1, -174, 175.1, -174, 176.1, -184, 181.1, -184, 182.1, -193, 187.1, -193, 187.9, -194.6, 189.5, -196, 189.5, -197.6, 191.5, -199, 191.5, -200.6, 193.5, -202, 193.5, -202, 194.1, -209, 198.1, -209, 199, -216.6, 205.5, -218, 205.5, -222.6, 210.5, -224, 210.5, -230.6, 217.5, -232, 217.5, -262, 247.9, -262, 249.9, -270, 257.9, -270, 260, -273, 262, -273, 264, -276, 266, -276, 267.8, -286, 280.8, -286, 282.9, -289, 285.9, -289, 287.7, -290.4, 290.5, -291.6, 290.5, -292, 290.9, -292, 292.7, -294.4, 297.5, -295.6, 297.5, -296, 297.9, -296, 299.7, -309, 324.8, -309, 327.7, -314, 337.7, -314, 340.7, -322, 364.5, -322, 367.4, -320.3, 371.5, -319.4, 371.5, -317.4, 375.5, -316.6, 375.5, -314, 378.1, -314, 380.2, -310, 386.2, -310, 389.3, -308, 393.3, -308, 405.7, -311.3, 415.5, -312.4, 415.5, -315.4, 421.5, -316.6, 421.5, -325.6, 429.5, -327.8, 429.5, -333.8, 432.5, -352, 432.5, -352, 431.4, -358, 430.3, -358, 429.1, -365, 426.2, -365, 425, -371, 420, -371, 418.1, -373, 417.1, -373, 414.8, -376, 410.8, -376, 387.5, -374.7, 387.5, -371.7, 378.5, -370.5, 378.5, -366, 372.2, -366, 368.5, -366.8, 368.5, -379, 324.6, -379, 319.5, -383, 302.6, -383, 293.5, -385, 217.5, -383.9, 217.5, -382.9, 200.5, -381.9, 200.5, -375.9, 163.5, -374.8, 163.5, -367.8, 133.5, -366.8, 133.5, -357.7, 104.5, -356.7, 104.5, -352.7, 92.5, -351.6, 92.5, -350, 89.3, -350, 85.5, -348.6, 85.5, -336.6, 59.5, -335.6, 59.5, -326.6, 42.5, -325.6, 42.5, -320.6, 33.5, -319.4, 33.5, -319, 33.1, -319, 30.5, -317.4, 30.5, -317, 30.1, -317, 27.5, -315.4, 27.5, -315, 27.1, -315, 24.5, -313.5, 24.5, -310, 20.2, -310, 17.5, -308.6, 17.5, -306.6, 13.5, -305.4, 13.5, -303, 11.1, -303, 8.5, -301.4, 8.5, -299, 6.09998, -299, 3.5, -297.4, 3.5, -294, 0.0999756, -294, -2.5, -292.4, -2.5, -288, -6.90002, -288, -9.5, -286.4, -9.5, -269.4, -28.5, -267.4, -28.5, -255.4, -41.5, -253.5, -41.5, -248.5, -47.5, -246.4, -47.5, -233.4, -59.5, -231.5, -59.5, -229.5, -62.5, -227.3, -62.5, -210.3, -75.5, -208.4, -75.5, -202.4, -80.5, -200.3, -80.5, -175, -95.1, -175, -101.5, -168, -178.5, -167, -178.5, -167, -187.5, -165.9, -187.5, -160.9, -229.5, -159.9, -229.5, -158.9, -240.5, -157.8, -240.5, -144.8, -306.5, -143.8, -306.5, -139.8, -325.5, -138.8, -325.5, -128.8, -360.5, -127.7, -360.5, -109.7, -411.5, -108.8, -411.5, -106.8, -418.5, -105.6, -418.5, -104, -421.7, -104, -425.5, -102.6, -425.5, -99, -432.7, -99, -436.5, -97.6, -436.5, -83.6, -465.5, -82.6, -465.5, -74.6, -480.5, -73.6, -480.5, -68.6, -489.5, -67.4, -489.5, -67, -489.9, -67, -492.5, -65.4, -492.5, -65, -492.9, -65, -495.5, -63.4, -495.5, -63, -495.9, -63, -498.5, -61.6, -498.5, -57.6, -505.5, -56.4, -505.5, -55, -506.9, -55, -509.5, -53.4, -509.5, -51, -511.9, -51, -514.5, -49.4, -514.5, -47, -516.9, -47, -519.5, -45.4, -519.5, -20.4, -547.5, -18.5, -547.5, -15.5, -551.5, -14, -551.5, -14, -552.5, -4, -552.5 )

[node name="Player" type="Area2D"]
scale = Vector2( 0.9, 0.9 )
script = ExtResource( 2 )

[node name="Spaceship" type="Sprite" parent="."]
position = Vector2( 0, 6.24561 )
scale = Vector2( 0.256704, 0.26572 )
texture = ExtResource( 5 )

[node name="AnimatedFire" type="AnimatedSprite" parent="Spaceship"]
show_behind_parent = true
position = Vector2( -17.671, 467.711 )
rotation = -3.14159
scale = Vector2( 0.291647, 0.343194 )
frames = SubResource( 1 )
animation = "idle"
playing = true

[node name="RageModeTimer" type="Timer" parent="."]
one_shot = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 0, 6.24561 )
scale = Vector2( 0.256704, 0.26572 )
polygon = PoolVector2Array( -4, -550.1, 0, -548.1, 0, -546.9, 25, -521.9, 25, -520, 30, -516, 30, -514, 34, -511, 34, -509, 38, -506, 38, -503.9, 46, -494.9, 46, -492.9, 54, -482.9, 54, -480.9, 59, -474.9, 59, -472.7, 59.6, -471.5, 60.4, -471.5, 62, -469.9, 62, -467.7, 63.6, -464.5, 64.4, -464.5, 66, -462.9, 66, -460.7, 69.6, -453.5, 70.4, -453.5, 72, -451.9, 72, -449.8, 86, -422.7, 86, -419.8, 89, -415.8, 89, -412.8, 92, -408.8, 92, -405.7, 100, -388.7, 100, -385.7, 103, -379.7, 103, -375.5, 104.7, -370.5, 105.8, -370.5, 106.8, -365.5, 107.6, -365.5, 109, -362.7, 109, -359.5, 122, -321.7, 122, -317.8, 128, -297.6, 128, -292.6, 131, -284.7, 131, -279.5, 140, -241.6, 140, -235.5, 148, -187.6, 148, -178.5, 152, -148.6, 152, -136.5, 155, -112.6, 155, -100.5, 155.9, -100.5, 156.9, -93.5, 158.4, -93.5, 163.4, -89.5, 165.2, -89.5, 174, -85.1, 174, -83.9, 174.4, -83.5, 176.2, -83.5, 179, -82.1, 179, -80.9, 179.4, -80.5, 181.2, -80.5, 184, -79.1, 184, -77.9, 184.4, -77.5, 186.2, -77.5, 189, -76.1, 189, -75.1, 198, -70.1, 198, -68.9, 198.4, -68.5, 201, -68.5, 201, -66.9, 201.4, -66.5, 204, -66.5, 204, -64.9, 204.4, -64.5, 207, -64.5, 207, -63.1, 211, -61.1, 211, -59.9, 212.4, -58.5, 215, -58.5, 215, -56.9, 216.4, -55.5, 219, -55.5, 219, -53.9, 221.4, -51.5, 224, -51.5, 224, -49.9, 226.4, -47.5, 229, -47.5, 229, -45.9, 260, -17.9, 260, -15.9, 276, 0.0999756, 276, 2, 281, 6, 281, 8, 284, 10, 284, 12, 288, 15, 288, 17.1, 296, 26.1, 296, 28.1, 304, 38.1, 304, 40.1, 309, 46.1, 309, 48.3, 309.6, 49.5, 310.4, 49.5, 312, 51.1, 312, 53.3, 312.6, 54.5, 313.4, 54.5, 315, 56.1, 315, 58.2, 331, 87.2, 331, 90.2, 334, 94.2, 334, 97.2, 337, 101.2, 337, 104.3, 343, 117.3, 343, 120.4, 349, 136.3, 349, 140.2, 351, 143.2, 351, 147.2, 357, 167.4, 357, 172.5, 364, 206.4, 364, 216.5, 366, 233.4, 366, 260.5, 365, 260.5, 365, 281.5, 364, 281.5, 364, 294.5, 362.9, 294.5, 360.9, 316.5, 359.9, 316.5, 354.8, 343.5, 353.8, 343.5, 350.8, 357.5, 349.8, 357.5, 346, 369.8, 346, 375.3, 353, 391.3, 353, 405.6, 350.8, 413.5, 349.7, 413.5, 347.7, 418.5, 346.5, 418.5, 339.5, 426.5, 337.4, 426.5, 334.4, 429.5, 331.3, 429.5, 328.3, 431.5, 310, 431.5, 310, 430.4, 304, 429.3, 304, 428.1, 298, 425.1, 298, 424, 292, 419, 292, 417.1, 290, 416.1, 290, 413.7, 286, 405.7, 286, 390.3, 289.3, 381.5, 290.5, 381.5, 296.5, 373.5, 298.6, 373.5, 300, 372.1, 300, 370.2, 303, 366.2, 303, 356.5, 302.2, 356.5, 298.2, 341.5, 297.3, 341.5, 292.3, 326.5, 291.4, 326.5, 289, 321.7, 289, 319.5, 288.4, 319.5, 269.4, 281.5, 268.4, 281.5, 263.4, 272.5, 262.6, 272.5, 261, 270.9, 261, 269.5, 259, 267.9, 259, 266.5, 258.4, 266.5, 254.4, 259.5, 253.5, 259.5, 247, 251.9, 247, 250.5, 242, 245.9, 242, 244.5, 234, 236.9, 234, 235.5, 210.6, 212.5, 208.6, 212.5, 194.6, 199.5, 192.5, 199.5, 190.5, 196.5, 188.7, 196.5, 171.7, 183.5, 169.7, 183.5, 161.7, 177.5, 159.8, 177.5, 157, 176.1, 157, 174.9, 156.6, 174.5, 154.8, 174.5, 148, 171.1, 148, 169.9, 147.6, 169.5, 145.7, 169.5, 141.7, 166.5, 138, 166.5, 138, 167.2, 135, 168.2, 135, 169.9, 133, 171.9, 133, 177.6, 115.8, 245.5, 114.8, 245.5, 103.7, 281.5, 102.6, 281.5, 89.7, 316.5, 88.5, 316.5, 85.5, 320.5, 83.6, 320.5, 82.6, 322.5, 80.3, 322.5, 74, 327, 74, 328.8, 69, 337.8, 69, 340.7, 63.7, 356.5, 63, 356.5, 63, 358.5, 61.5, 358.5, 57.5, 363.5, 53.2, 363.5, 45.1, 365.5, 16, 365.5, 16, 366.5, 13, 366.5, 13, 367.1, 11, 368.1, 11, 369.1, 21, 378.1, 21, 379.9, 23, 380.9, 23, 383.2, 26, 388.2, 26, 392.5, 27, 405.5, 25.9, 405.5, 24.9, 412.5, 23.6, 412.5, 19.6, 420.5, 18.5, 420.5, 14.5, 425.5, 12.4, 425.5, 8.40002, 429.5, 5.29999, 429.5, 2.29999, 431.5, -16, 431.5, -16, 430.4, -22, 429.3, -22, 428.2, -27, 426.2, -27, 425, -35, 418, -35, 416.1, -37, 415.1, -37, 412.7, -40, 406.7, -40, 390.3, -36.7, 381.5, -35.7, 381.5, -34.7, 378.5, -33.4, 378.5, -26, 371.1, -26, 369.3, -25.5, 368.3, -29.3, 365.5, -40.1, 365.5, -80, 361.4, -80, 360.1, -82, 359.1, -82, 356.8, -84, 353.8, -84, 349.8, -86, 346.8, -86, 342.8, -90.8, 325.5, -92.3, 325.5, -100.2, 320.5, -104, 320.5, -104, 319, -108, 316, -108, 313.7, -115, 298.7, -115, 296.5, -115.6, 296.5, -117, 293.7, -117, 290.8, -120, 285.8, -120, 282.6, -132, 250.7, -132, 246.5, -141, 219.7, -141, 215.8, -148, 191.6, -148, 186.7, -150, 182.7, -150, 176.5, -150.8, 172.5, -151.7, 172.5, -153.7, 167.5, -155.1, 167.5, -159, 166.7, -176, 175.1, -176, 176.1, -186, 181.1, -186, 182.1, -195, 187.1, -195, 187.9, -196.6, 189.5, -198, 189.5, -199.6, 191.5, -201, 191.5, -202.6, 193.5, -204, 193.5, -204, 194.1, -211, 198.1, -211, 199, -218.6, 205.5, -220, 205.5, -224.6, 210.5, -226, 210.5, -232.6, 217.5, -234, 217.5, -262, 245.9, -262, 247.9, -270, 255.9, -270, 258, -273, 260, -273, 262, -276, 264, -276, 265.8, -286, 278.8, -286, 280.9, -289, 283.9, -289, 285.7, -290.4, 288.5, -291.6, 288.5, -292, 288.9, -292, 290.7, -294.4, 295.5, -295.6, 295.5, -296, 295.9, -296, 297.7, -310, 324.8, -310, 327.7, -315, 337.7, -315, 340.7, -323, 364.5, -323, 367.3, -320.4, 373.5, -319.4, 373.5, -317.4, 377.5, -316.6, 377.5, -314, 380.1, -314, 382.2, -311, 386.2, -311, 389.3, -309, 393.3, -309, 405.7, -315.4, 419.5, -316.5, 419.5, -321.5, 425.5, -323.6, 425.5, -327.6, 429.5, -330.7, 429.5, -333.7, 431.5, -352, 431.5, -352, 430.4, -358, 429.3, -358, 428.2, -363, 426.2, -363, 425, -371, 418, -371, 415.9, -375, 410.9, -375, 387.5, -373.8, 387.5, -371.8, 380.5, -370.5, 380.5, -365, 372.2, -365, 368.5, -365.8, 368.5, -378, 324.6, -378, 319.5, -382, 302.6, -382, 293.5, -384, 217.5, -382.9, 217.5, -381.9, 200.5, -380.9, 200.5, -374.9, 163.5, -373.8, 163.5, -366.8, 133.5, -365.8, 133.5, -356.7, 104.5, -355.7, 104.5, -351.7, 92.5, -350.6, 92.5, -349, 89.3, -349, 85.5, -347.6, 85.5, -336.6, 61.5, -335.6, 61.5, -326.6, 44.5, -325.6, 44.5, -320.6, 35.5, -319.4, 35.5, -319, 35.1, -319, 32.5, -317.4, 32.5, -317, 32.1, -317, 29.5, -315.4, 29.5, -315, 29.1, -315, 26.5, -313.5, 26.5, -310, 22.2, -310, 19.5, -308.6, 19.5, -306.6, 15.5, -305.4, 15.5, -303, 13.1, -303, 10.5, -301.4, 10.5, -299, 8.09998, -299, 5.5, -297.4, 5.5, -294, 2.09998, -294, -0.5, -292.4, -0.5, -288, -4.90002, -288, -7.5, -286.4, -7.5, -267.4, -28.5, -265.4, -28.5, -253.4, -41.5, -251.5, -41.5, -246.5, -47.5, -244.4, -47.5, -231.4, -59.5, -229.5, -59.5, -227.5, -62.5, -225.4, -62.5, -220.4, -67.5, -218.4, -67.5, -208.4, -75.5, -206.4, -75.5, -203.4, -78.5, -202, -78.5, -200.4, -80.5, -198.4, -80.5, -193.4, -84.5, -191.2, -84.5, -188, -86.1, -188, -86.9, -186.4, -88.5, -184.2, -88.5, -175, -93.1, -175, -94.6, -173, -101.8, -173, -112.5, -166, -187.5, -164.9, -187.5, -159.9, -229.5, -158.9, -229.5, -157.9, -240.5, -156.8, -240.5, -143.8, -306.5, -142.8, -306.5, -138.8, -325.5, -137.8, -325.5, -127.8, -360.5, -126.7, -360.5, -108.7, -411.5, -107.8, -411.5, -105.8, -418.5, -104.6, -418.5, -103, -421.7, -103, -425.5, -101.6, -425.5, -98, -432.7, -98, -436.5, -96.6, -436.5, -83.6, -463.5, -82.6, -463.5, -74.6, -478.5, -73.6, -478.5, -68.6, -487.5, -67.4, -487.5, -67, -487.9, -67, -490.5, -65.4, -490.5, -65, -490.9, -65, -493.5, -63.4, -493.5, -63, -493.9, -63, -496.5, -61.6, -496.5, -57.6, -503.5, -56.4, -503.5, -55, -504.9, -55, -507.5, -53.4, -507.5, -51, -509.9, -51, -512.5, -49.4, -512.5, -47, -514.9, -47, -517.5, -45.4, -517.5, -41, -521.9, -41, -524.5, -39.4, -524.5, -32, -531.9, -32, -534.5, -30.4, -534.5, -18.4, -547.5, -16.4, -547.5, -14, -549.9, -14, -551.5, -4, -551.5 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
position = Vector2( 0, 6.24561 )
scale = Vector2( 0.256704, 0.26572 )
occluder = SubResource( 2 )
[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
[connection signal="timeout" from="RageModeTimer" to="." method="_on_RageModeTimer_timeout"]
